--- a/ub.html
+++ b/ub.html
@@ -18,8 +18,8 @@
             <ul class="navItems">
                 <li><a href="index.html">Inicio</a></li>
                 <li><a href="contactanos.html">Contactanos</a></li>
-                <li><a href="Ub.html">Ubicacion y Horario</a></li>
-                <li><a href="Product.html">Productos</a></li>
+                <li><a href="ub.html">Ubicacion y Horario</a></li>
+                <li><a href="product.html">Productos</a></li>
             </ul>
         </nav>
         <script>
